--- a/.github/walmart-probot-buddy.yml
+++ b/.github/walmart-probot-buddy.yml
@@ -1,6 +1,7 @@
 enabled_features:
 #  - stalebot
-  - "names, e.g.:"
-  - semantic-pull-requests
-  - bot-pr-merge
+  # - "names, e.g.:"
+  # - semantic-pull-requests
+  # - bot-pr-merge
   - stale-branch-bot
+  - stalebot
